Update CSS, JS and responsive media query

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/ba3f71d67a.js"></script>
     <script src="main.js" defer></script>
     <title>Youtube Clone</title>
